[project]
name = "starlette-mcp-sse"
version = "0.1.0"
description = "A working example to create a starlette server with SSE-based MCP support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "starlette>=0.46.1",
    "uvicorn>=0.32.1",
    "asyncpg>=0.29.0", # Add this line (you can adjust version if needed)
]

[project.scripts]
start = "server:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
